--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "utilities"
   ],
   "author": {
-    "name": "Andy Gainey"
+    "name": "Andy Gainey",
+    "url": "https://github.com/againey"
   },
   "dependencies": {
     "com.unity.test-framework": "1.1.11"
